--- a/app/templates/trial_tab/managers_status_tab.html
+++ b/app/templates/trial_tab/managers_status_tab.html
@@ -12,53 +12,92 @@
   <div>
 
     <p>
-      managers status to be displayed here
+      Managers status to be displayed here
     </p>
 
 
     <div class="chart" id="line_chart_manager_status">
+      <!-- line_chart_manager_status -->
       <script src="{{ url_for('static', filename='js/trial_tab_plotly.js') }}"></script>
 
     </div>
 
 
-    <div class="chart" id="line_chart_manager_status2"></div>
-
-    <div class="chart" id="line_chart_manager_status3"></div>
-
-    <div class="chart" id="line_chart_manager_status4"></div>
-
-    <!-- Heat Map Graph -->
-    <div id="myDiv" style="width:100%;height:500px;">
-      <script src="{{ url_for('static', filename='js/plotly_buttons.js') }}"></script>
+    <div class="chart" id="line_chart_manager_status2">
+      <!-- line_chart_manager_status2 -->
     </div>
 
-    <!-- <div id='countryDiv'></div>
+    <div class="chart" id="line_chart_manager_status3">
+      <!-- line_chart_manager_status3 -->
+    </div>
 
+    <div class="chart" id="line_chart_manager_status4">
+      <!-- line_chart_manager_status4 -->
+    </div>
 
-    <div class="showcase__section" id="bubble">
+    <!-- Heat Map Graph -->
+    <!-- <div id="myDiv" style="width:100%;height:500px;">
+    </div>  -->
+    <script src="{{ url_for('static', filename='js/plotly_buttons.js') }}"></script>
+
+    <!-- <div id='countryDiv'></div> -->
+    <!--id here is used-->
+    <!-- <div class="showcase__section" id="bubble">
       <div class="spacer --small"></div>
       <div id="bubbleplots">
-        <div class="bubbleplot" data-num="0">
-          <div class="plot" id="plotdiv"></div>
-          <div class="control-row">
-            Country: 
-            <select class="countrydata"></select>
-          </div>
+        <div class="bubbleplot" data-num="1"> -->
+          <!--data-num is used -->
+          <!-- <div class="plot" id="plotdiv"></div> -->
+          <!--class name here is used-->
+          <!-- <div class="control-row">
+            Country:
+            <select class="countrydata"></select> -->
+            <!--class name here is used-->
+          <!-- </div>
         </div>
       </div>
     </div> -->
 
 
+    <div id='hostnamesDiv'></div>
+    <!--id here is used-->
+    <div class="showcase__section" id="bubble" >
+      <div class="spacer --small"></div>
+      <div id="bubbleplots">
+        <div class="bubbleplot" data-num="0">
+          <!--data-num is used -->
+          <div class="plot" id="plotdiv"></div>
+          <!--class name here is used-->
+          <div class="control-row">
+            Choose a hostname:
+            <select id="hostnamesdata" class="hostnamesdata"></select>
+            <!--class name here is used-->
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- <div id='hostnamesDiv' data-num="0">
+      Choose a hostname:
+      <select id="hostnamesdata" class="hostnamesdata">
+      </select>
+    </div> -->
+
+
+
+
+
+
+    <div id="myDiv2"></div>
 
 
     <!-- host names -->
-    <div id="myDiv2" style="width:100%;height:500px;"></div>
+
     <!-- <div id="myDiv3" class="container-fluid"></div> -->
-    <div id="myDiv3" ></div>
+    <!-- <div id="myDiv3"></div> -->
 
 
-    <div id='myDiv_select'></div>
+    <!-- <div id='myDiv_select'>myDiv_select</div> -->
 
   </div>
 
