Plot tied to the selected items from Multiselect Dropdown added using selectize

--- a/app/templates/trial_tab/managers_status_tab.html
+++ b/app/templates/trial_tab/managers_status_tab.html
@@ -104,7 +104,7 @@
 
 
     <!--id here is used-->
-    <div class="showcase__section" id="bubble">
+    <div class="showcase__section" id="bubble" style="padding-top: 40px;">
       <div class="spacer --small"></div>
       <div id="bubbleplots">
         <div class="bubbleplot" data-num="2">
