plot dimension adjustments

--- a/app/templates/trial_tab/managers_status_tab.html
+++ b/app/templates/trial_tab/managers_status_tab.html
@@ -29,7 +29,7 @@
           <!--data-num is used -->
           <div class="plot" id="plotdiv"></div>
           <!--class name here is used-->
-          <div class="control-row">
+          <div class="control-group">
             Choose Hostnames:
             <!-- <select id="hostnamesdata" class="hostnamesdata" multiple="multiple"></select> -->
             <select id="hostnamesdata" class="hostnamesdata">
