adding 3rd plot. Removing unwanted tabs from side menu

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -139,14 +139,14 @@
               <a class="nav-link" href="jobs">
                 <i class="nav-icon icon-list"></i> Jobs List</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="flowcharts">
                 <i class="nav-icon fas fa-project-diagram"></i> Flowcharts List</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects">
                 <i class="nav-icon fas fa-object-group"></i> Projects List</a>
-            </li>
+            </li> -->
             <!-- Trials by Eman -->
             <li class="nav-item">
               <a class="nav-link" href="trial_tab_page">
