--- a/app/templates/trial_tab/managers_status_tab.html
+++ b/app/templates/trial_tab/managers_status_tab.html
@@ -66,6 +66,9 @@
       </div>
     </div>
     <div id='clusternamesDiv' ></div>
+    
+    <div id='clusternames_activeTasksDiv' ></div>
+
 
     <!-- <select id="select-to" class="contacts" placeholder="Pick some people..."></select> -->
 
