changing data structures to be try to group hostnames by clustername, data structure changed, but grouping has an issue that needs to be discussed

--- a/app/templates/views/main.html
+++ b/app/templates/views/main.html
@@ -37,11 +37,11 @@
               <i class="icon-settings"></i>
             </button>
             <div class="dropdown-menu dropdown-menu-right">
-              <a class="dropdown-item nav-link" href="flowcharts">View Flowcharts</a>
-              <a class="dropdown-item" href="#">Import Flowchart</a>
+              <a class="dropdown-item nav-link" href="managers_status_tab_render">View Flowcharts</a>
+              <!-- <a class="dropdown-item" href="#">Import Flowchart</a> -->
             </div>
           </div>
-          <div class="text-value-lg"><a class='nav-link' href="flowcharts" style="color:white">My Flowcharts</a></div>
+          <div class="text-value-lg"><a class='nav-link' href="managers_status_tab_render" style="color:white">My Flowcharts</a></div>
         </div>
         <div class="chart-wrapper mt-3 px-3" style="height:175px;">
           <div class="text-value">{{ flowcharts|length }}</div>flowcharts in library
@@ -57,11 +57,11 @@
               <i class="icon-settings"></i>
             </button>
             <div class="dropdown-menu dropdown-menu-right">
-              <a class="dropdown-item nav-link" href="projects">View Projects</a>
-              <a class="dropdown-item" href="#">Create New Project</a>
+              <a class="dropdown-item nav-link" href="managers_status_tab_render">View Projects</a>
+              <!-- <a class="dropdown-item" href="#">Create New Project</a> -->
             </div>
           </div>
-          <div class="text-value-lg"><a class='nav-link' href="projects" style="color:white">My Projects</a></div>
+          <div class="text-value-lg"><a class='nav-link' href="managers_status_tab_render" style="color:white">My Projects</a></div>
         </div>
         <div class="chart-wrapper mt-3 px-3" style="height:175px;">
             <div class="text-value">{{ projects|length }}</div>projects
