Finalizing grouping hostnames by clusternames, commenting prints, starting to move the processing of data to python

--- a/app/templates/trial_tab/managers_status_tab.html
+++ b/app/templates/trial_tab/managers_status_tab.html
@@ -30,10 +30,10 @@
           <div class="plot" id="plotdiv"></div>
           <!--class name here is used-->
           <div class="control-group">
-            Choose Hostnames:
+            Choose Hostnames to plot:
             <!-- <select id="hostnamesdata" class="hostnamesdata" multiple="multiple"></select> -->
             <select id="hostnamesdata" class="hostnamesdata">
-              <option disabled> Choose Hostnames to Plot</option>
+              <!-- <option disabled> Choose Hostnames to Plot</option> -->
             </select>
 
 
