date slider and dropdown binded to plot

--- a/app/templates/trial_tab/managers_status_tab.html
+++ b/app/templates/trial_tab/managers_status_tab.html
@@ -22,7 +22,7 @@
   <div>
 
     <!--id here is used-->
-    <div class="showcase__section" id="bubble" style="padding-top: 40px;">
+    <div class="showcase__section" id="bubble" style="padding: 40px; border: 5px;">
       <div class="spacer --small"></div>
       <div id="bubbleplots">
         <div class="bubbleplot" data-num="0">
@@ -35,6 +35,7 @@
             <select id="hostnamesdata" class="hostnamesdata">
               <!-- <option disabled> Choose Hostnames to Plot</option> -->
             </select>
+            <div id = 'range_slider' ></div>
 
 
             <!--class name here is used-->
@@ -46,7 +47,7 @@
 
 
     <!--id here is used-->
-    <div class="showcase__section" id="bubble" >
+    <div class="showcase__section" id="bubble" style="padding: 50px; border: 5px;" >
       <div class="spacer --small"></div>
       <div id="bubbleplots">
         <div class="bubbleplot" data-num="2">
