hostname dropdown, default selected values, slider, and plot working. Migrating to python using dataframes draft

--- a/app/templates/trial_tab/managers_status_tab.html
+++ b/app/templates/trial_tab/managers_status_tab.html
@@ -32,7 +32,7 @@
           <div class="control-group">
             Choose Hostnames to plot:
             <!-- <select id="hostnamesdata" class="hostnamesdata" multiple="multiple"></select> -->
-            <select id="hostnamesdata" class="hostnamesdata">
+            <select id="hostnamesdata" class="hostnamesdata" style="margin-top: 5px;">
               <!-- <option disabled> Choose Hostnames to Plot</option> -->
             </select>
             <div id = 'range_slider' ></div>
@@ -45,7 +45,7 @@
     </div>
     <div id='hostnamesDiv'></div>
 
-
+    
     <!--id here is used-->
     <div class="showcase__section" id="bubble" style="padding: 50px; border: 5px;" >
       <div class="spacer --small"></div>
