Using pandas dataframes to prepare data in python instead of JS. Starting to explore datatables for users access tab

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -156,11 +156,28 @@
               <a class="nav-link" href="template">
                 <i class="nav-icon fas fa-object-group"></i> Trial Template</a>
             </li>
+            <!--------------------------------------------------->
+            <li class="nav-item">
+              <a class="nav-link" href="database_statistics_tab_render">
+                <i class="nav-icon fas fa-object-group"></i> Database Statistics</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="results_statistics_tab_render">
+                <i class="nav-icon fas fa-object-group"></i> Results Statistics</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="tasks_queue_tab_render">
+                <i class="nav-icon fas fa-object-group"></i> Task Queue</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="users_access_tab_render">
+                <i class="nav-icon fas fa-object-group"></i> Users Access</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="managers_status_tab_render">
                 <i class="nav-icon fas fa-object-group"></i> Managers Status</a>
             </li>
-            <!----------------------------------->
+            <!--------------------------------------------------->
             <li class="nav-title">Actions</li>
               <li class="nav-item">
               <a class="nav-link" href="#">
