--- a/app/templates/trial_tab/tasks_queue.html
+++ b/app/templates/trial_tab/tasks_queue.html
@@ -9,15 +9,18 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
-    <script src="{{ url_for('static', filename='js/users_access.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/task_queue.js') }}"></script>
 
 </head>
 
 <body>
     <div id="datatabels_wrapper">
-        Users Access Tables
-        <table id="users_info" class="display"> </table>
-        <!-- <table id="users_info_2" class="display"> </table> -->
+       Tasks Queue Tables
+        <!-- <table id="users_info" class="display"> </table> -->
+        <table id="users_info_2" class="display"> </table>
+        <div id='task_queueDiv' ></div>
+        <div id='task_queue_managersDiv' ></div>
+
       </div>
     </div>
     
