removing comments and logs from Task Queue JS and HTML

--- a/app/templates/trial_tab/tasks_queue.html
+++ b/app/templates/trial_tab/tasks_queue.html
@@ -1,4 +1,4 @@
-<!-- Datatable of users access goes here -->
+<!-- Datatable of tasks queue goes here -->
 <!doctype html>
 <html lang="en">
 <title>Users Access</title>
@@ -16,8 +16,7 @@
 <body>
     <div id="datatabels_wrapper">
        Tasks Queue Tables
-        <!-- <table id="users_info" class="display"> </table> -->
-        <table id="users_info_2" class="display"> </table>
+        <table id="task_queue_table class="display"> </table>
         <div id='task_queueDiv' ></div>
         <div id='task_queue_managersDiv' ></div>
 
