syntax error fixed. Removing more logs from plotly_buttons.js

--- a/app/templates/trial_tab/tasks_queue.html
+++ b/app/templates/trial_tab/tasks_queue.html
@@ -16,7 +16,7 @@
 <body>
     <div id="datatabels_wrapper">
        Tasks Queue Tables
-        <table id="task_queue_table class="display"> </table>
+        <table id="task_queue_table" class="display"> </table>
         <div id='task_queueDiv' ></div>
         <div id='task_queue_managersDiv' ></div>
 
