adding margin after tasks managers plot

--- a/app/templates/trial_tab/tasks_queue.html
+++ b/app/templates/trial_tab/tasks_queue.html
@@ -18,7 +18,7 @@
        Tasks Queue Tables
         <table id="task_queue_table" class="display"> </table>
         <div id='task_queueDiv' ></div>
-        <div id='task_queue_managersDiv' ></div>
+        <div id='task_queue_managersDiv' style="margin-bottom: 50px"></div>
 
       </div>
     </div>
