--- a/app/templates/trial_tab/tasks_queue.html
+++ b/app/templates/trial_tab/tasks_queue.html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="datatabels_wrapper">
-       Tasks Queue Tables
+       Tasks Queue Table
         <table id="task_queue_table" class="display"> </table>
         <div id='task_queueDiv' ></div>
         <div id='task_queue_managersDiv' style="margin-bottom: 50px"></div>
