--- a/app/templates/trial_tab/tasks_queue_sub_tab_datatable.html
+++ b/app/templates/trial_tab/tasks_queue_sub_tab_datatable.html
@@ -25,7 +25,7 @@
 <body>
     <div id="datatabels_wrapper">
         Tasks Queue Table
-        <table id="task_queue_table" class="display">
+        <table id="task_queue_table" class="display"> 
             <thead>
                 <tr>
                     <th>Base result ID</th>
@@ -37,8 +37,9 @@
                 </tr>
             </thead>
         </table>
-        <div id='task_queueDiv'></div>
+        <div id='task_queueDiv'></div> <!-- will have this for now to avoid DOM element undefined or null error-->
         <div id='task_queue_managersDiv' style="margin-bottom: 50px"></div>
+        <!-- will have this for now to avoid DOM element undefined or null error-->
     </div>
     </div>
 
