--- a/app/templates/trial_tab/tasks_queue_sub_tab_plots.html
+++ b/app/templates/trial_tab/tasks_queue_sub_tab_plots.html
@@ -16,7 +16,7 @@
 
     <script src="{{ url_for('static', filename='js/task_queue.js') }}"></script>
 
-
+    
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/select/1.3.3/css/select.dataTables.min.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css" />
@@ -24,19 +24,7 @@
 
 <body>
     <div id="datatabels_wrapper">
-        Tasks Queue Table
-        <table id="task_queue_table" class="display">
-            <thead>
-                <tr>
-                    <th>Base result ID</th>
-                    <th>Status</th>
-                    <th>Manager</th>
-                    <th>Priority</th>
-                    <th>Modified_on</th>
-                    <th>Created_on</th>
-                </tr>
-            </thead>
-        </table>
+        Tasks Queue Plots
         <div id='task_queueDiv'></div>
         <div id='task_queue_managersDiv' style="margin-bottom: 50px"></div>
     </div>
