restart fixed by calling ajax once in JS and iterating over the IDs in python instead of JS. Also, delete fake function added to return base_result_id selected tasks

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -143,25 +143,25 @@
               <i class="nav-icon icon-speedometer"></i> Dashboard
             </a>
           </li>
-          <li class="nav-item c-sidebar-nav-item c-sidebar-nav-dropdown c-show " id="chaps">
-            <a class="nav-link c-sidebar-nav-link c-sidebar-nav-dropdown-toggle" href="tasks_queue_tab_render">
-              <i class="nav-icon fas fa-object-group"></i> Task Queue</a>
 
+          <li class="c-sidebar-nav-item c-sidebar-nav-dropdown nav-item " id="chaps">
+            <a class=" c-sidebar-nav-dropdown-toggle nav-link c-sidebar-nav-link c-sidebar-nav-dropdown-toggle"
+              href="#">
+
+              <!-- <a class="nav-link c-sidebar-nav-link c-sidebar-nav-dropdown-toggle" href="tasks_queue_tab_render"> -->
+              <i class="nav-icon fas fa-object-group c-show"></i> Task Queue</a>
             <ul class="c-sidebar-nav-dropdown-items">
-
               <li class="nav-link c-sidebar-nav-item">
                 <a class="nav-link c-sidebar-nav-link" href="tasks_queue_sub_tab_render_datatable">
                   <i class="nav-icon fas fa-object-group"></i> Data Table</a>
               </li>
-
               <li class="nav-link c-sidebar-nav-item">
                 <a class="nav-link c-sidebar-nav-link" href="tasks_queue_sub_tab_render_plots">
                   <i class="nav-icon fas fa-object-group"></i> Plots</a>
-
               </li>
             </ul>
-
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="users_access_tab_render">
               <i class="nav-icon fas fa-object-group"></i> Users Access</a>
