changes to the Task Queue subtabs. Removing redundant instantiation of client in each function. Removing Jobs related HTML and JS

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -144,20 +144,18 @@
             </a>
           </li>
 
-          <li class="c-sidebar-nav-item c-sidebar-nav-dropdown nav-item " id="chaps">
-            <a class=" c-sidebar-nav-dropdown-toggle nav-link c-sidebar-nav-link c-sidebar-nav-dropdown-toggle"
-              href="#">
 
-              <!-- <a class="nav-link c-sidebar-nav-link c-sidebar-nav-dropdown-toggle" href="tasks_queue_tab_render"> -->
-              <i class="nav-icon fas fa-object-group c-show"></i> Task Queue</a>
-            <ul class="c-sidebar-nav-dropdown-items">
-              <li class="nav-link c-sidebar-nav-item">
-                <a class="nav-link c-sidebar-nav-link" href="tasks_queue_sub_tab_render_datatable">
-                  <i class="nav-icon fas fa-object-group"></i> Data Table</a>
+          <li class="nav-item nav-dropdown">
+            <a class="nav-link nav-dropdown-toggle" href="#">
+              <i class="nav-icon icon-settings"></i> Task Queue</a>
+            <ul class="nav-dropdown-items">
+              <li class="nav-item">
+                <a class="nav-link" href="tasks_queue_sub_tab_render_datatable">
+                  <!-- <i class="nav-icon icon-pencil"></i>--> Data Table</a>
               </li>
-              <li class="nav-link c-sidebar-nav-item">
-                <a class="nav-link c-sidebar-nav-link" href="tasks_queue_sub_tab_render_plots">
-                  <i class="nav-icon fas fa-object-group"></i> Plots</a>
+              <li class="nav-item">
+                <a class="nav-link" href="tasks_queue_sub_tab_render_plots">
+                  <!-- <i class="nav-icon icon-pencil"></i>--> Plots</a> 
               </li>
             </ul>
           </li>
