--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,7 +52,7 @@
     <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <ul class="nav navbar-nav d-md-down-none">
+    <!-- <ul class="nav navbar-nav d-md-down-none">
       <li class="nav-item px-3">
         <a class="nav-link" href="#">Dashboard</a>
       </li>
@@ -62,7 +62,7 @@
       <li class="nav-item px-3">
         <a class="nav-link" href="#">Settings</a>
       </li>
-    </ul>
+    </ul> -->
     <ul class="nav navbar-nav ml-auto">
       {#        <li class="nav-item d-md-down-none">#}
       {#          <a class="nav-link" href="#">#}
@@ -179,12 +179,8 @@
             <a class="nav-link" href="results_statistics_tab_render">
               <i class="nav-icon fas fa-object-group"></i> Results Statistics</a>
           </li>
-          <!-- Not Yet Designed or Developed -->
-          <li class="nav-item">
-            <a class="nav-link" href="jobs">
-              <i class="nav-icon icon-list"></i> Jobs List</a>
-          </li>
-          <li class="nav-title">Actions</li>
+          
+          <!-- <li class="nav-title">Actions</li>
           <li class="nav-item">
             <a class="nav-link" href="#">
               <i class="nav-icon icon-puzzle"></i> Submit Job</a>
@@ -206,7 +202,7 @@
                 <a class="nav-link" href="#">
                   <i class="nav-icon icon-pencil"></i> Edit</a>
               </li>
-            </ul>
+            </ul> -->
           </li>
         </ul>
       </nav>
