--- a/app/templates/trial_tab/tasks_queue_sub_tab_datatable.html
+++ b/app/templates/trial_tab/tasks_queue_sub_tab_datatable.html
@@ -21,6 +21,11 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/select/1.3.3/css/select.dataTables.min.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css" />
 </head>
+<style>
+    .deleteButton {
+        background-color: red
+    }
+</style>
 
 <body>
     <div id="datatabels_wrapper">
@@ -47,5 +52,10 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div> -->
+    <style>
+        .deleteButton {
+            background-color: red
+        }
+    </style>
 
 </body>
