--- a/app/templates/trial_tab/users_access.html
+++ b/app/templates/trial_tab/users_access.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+
     <script src="{{ url_for('static', filename='js/users_access.js') }}"></script>
 
 </head>
@@ -20,5 +21,6 @@
         <!-- <table id="users_info_2" class="display"> </table> -->
       </div>
     </div>
+    <div id='myDiv'><!-- Plotly chart will be drawn inside this DIV --></div>
     
 </body>
