--- a/app/templates/views/main.html
+++ b/app/templates/views/main.html
@@ -11,19 +11,17 @@
               <i class="icon-settings"></i>
             </button>
             <div class="dropdown-menu dropdown-menu-right">
-              <a class="dropdown-item nav-link" href="jobs">View Jobs List</a>
-              <a class="dropdown-item nav-link" href="#">Import Job</a>
-              <a class="dropdown-item nav-link" href="#">Submit Job</a>
+              <a class="dropdown-item nav-link" href="tasks_queue_sub_tab_render_datatable">View Tasks Table</a>
+              <a class="dropdown-item nav-link" href="tasks_queue_sub_tab_render_plots">View Tasks Plot</a>
+              <!-- <a class="dropdown-item nav-link" href="#">Submit Job</a> -->
             </div>
           </div>
-          <div class="text-value-lg"><a class='nav-link' href="jobs" style="color:white">My Jobs</a></div>
+          <div class="text-value-lg"><a class='nav-link' href="jobs" style="color:white">Tasks</a></div>
         </div>
         <div class="chart-wrapper mt-3 px-3" style="height:175px;">
           <div class="text-value">0</div>running
-          <div class="text-value">{{ jobs|length }}</div>completed
-          <div class="text-value">0</div>in queue<br><br>
-
-            
+          <div class="text-value">{{ jobs|length }}</div>errored
+          <div class="text-value">0</div>waiting<br><br>
         </div>
       </div>
     </div>
@@ -37,14 +35,14 @@
               <i class="icon-settings"></i>
             </button>
             <div class="dropdown-menu dropdown-menu-right">
-              <a class="dropdown-item nav-link" href="managers_status_tab_render">View Flowcharts</a>
+              <a class="dropdown-item nav-link" href="managers_status_tab_render">Managers</a>
               <!-- <a class="dropdown-item" href="#">Import Flowchart</a> -->
             </div>
           </div>
-          <div class="text-value-lg"><a class='nav-link' href="managers_status_tab_render" style="color:white">My Flowcharts</a></div>
+          <div class="text-value-lg"><a class='nav-link' href="managers_status_tab_render" style="color:white">Managers</a></div>
         </div>
         <div class="chart-wrapper mt-3 px-3" style="height:175px;">
-          <div class="text-value">{{ flowcharts|length }}</div>flowcharts in library
+          <div class="text-value">{{ flowcharts|length }}</div>Managers being used
         </div>
       </div>
     </div>
@@ -57,14 +55,14 @@
               <i class="icon-settings"></i>
             </button>
             <div class="dropdown-menu dropdown-menu-right">
-              <a class="dropdown-item nav-link" href="managers_status_tab_render">View Projects</a>
+              <a class="dropdown-item nav-link" href="user">Users</a>
               <!-- <a class="dropdown-item" href="#">Create New Project</a> -->
             </div>
           </div>
-          <div class="text-value-lg"><a class='nav-link' href="managers_status_tab_render" style="color:white">My Projects</a></div>
+          <div class="text-value-lg"><a class='nav-link' href="users_access_tab_render" style="color:white">Users</a></div>
         </div>
         <div class="chart-wrapper mt-3 px-3" style="height:175px;">
-            <div class="text-value">{{ projects|length }}</div>projects
+            <div class="text-value">{{ projects|length }}</div>Users
         </div>
       </div>
     </div>
