--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -155,15 +155,33 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="tasks_queue_sub_tab_render_plots">
-                  <!-- <i class="nav-icon icon-pencil"></i>--> Plots</a> 
+                  <!-- <i class="nav-icon icon-pencil"></i>--> Plots</a>
               </li>
             </ul>
           </li>
 
-          <li class="nav-item">
+          <li class="nav-item nav-dropdown">
+            <a class="nav-link nav-dropdown-toggle" href="#">
+              <i class="nav-icon icon-settings"></i> Users Access</a>
+            <ul class="nav-dropdown-items">
+              <li class="nav-item">
+                <a class="nav-link" href="users_access_tab_render">
+                  <!-- <i class="nav-icon icon-pencil"></i>--> Data Table & Plot</a>
+              </li>
+              
+              <li class="nav-item">
+                <a class="nav-link" href="users_access_tab_render_map">
+                  <!-- <i class="nav-icon icon-pencil"></i>-->Bubble Map</a>
+              </li>
+            </ul>
+          </li>
+
+          <!-- <li class="nav-item">
             <a class="nav-link" href="users_access_tab_render">
               <i class="nav-icon fas fa-object-group"></i> Users Access</a>
-          </li>
+          </li> -->
+
+
           <li class="nav-item">
             <a class="nav-link" href="managers_status_tab_render">
               <i class="nav-icon fas fa-object-group"></i> Managers Status</a>
@@ -179,7 +197,7 @@
             <a class="nav-link" href="results_statistics_tab_render">
               <i class="nav-icon fas fa-object-group"></i> Results Statistics</a>
           </li>
-          
+
           <!-- <li class="nav-title">Actions</li>
           <li class="nav-item">
             <a class="nav-link" href="#">
