--- a/app/templates/trial_tab/users_access.html
+++ b/app/templates/trial_tab/users_access.html
@@ -22,5 +22,6 @@
       </div>
     </div>
     <div id='myDiv'><!-- Plotly chart will be drawn inside this DIV --></div>
+    <div id='subdivisionDiv'><!-- Plotly chart will be drawn inside this DIV --></div>
     
 </body>
